--- a/.shopifyignore
+++ b/.shopifyignore
@@ -1,16 +1,84 @@
+# Vite build artifacts
 assets/.vite/*
 assets/swatches.css
-node_modules/
-src/
-.git/
-.vscode/
-*.md
+
+# Node.js dependencies
+node_modules/*
+.yarn/*
+.pnp.*
+*.tsbuildinfo
+
+# Source files (not processed Shopify assets)
+src/*
+
+# Build and development tools
+vite.config.js
+vite.config.ts
+tailwind.config.js
+tailwind.config.ts
+postcss.config.js
+postcss.config.ts
+webpack.config.js
+rollup.config.js
+
+# Linting and formatting
+eslint.config.js
+eslint.config.mjs
+.eslintrc.*
+.prettierrc.*
+.stylelintrc.*
+
+# Package management
 package.json
 package-lock.json
 yarn.lock
-vite.config.js
-tailwind.config.js
-postcss.config.js
-.eslintrc.*
-.prettierrc.*
+pnpm-lock.yaml
+.yarnrc.yml
+.npmrc
+
+# Git and version control
+.git/*
 .gitignore
+.gitattributes
+
+# Editor and IDE files
+.vscode/*
+.idea/*
+*.swp
+*.swo
+*~
+
+# Documentation
+*.md
+README.*
+CHANGELOG.*
+LICENSE.*
+
+# Environment and config files
+.env*
+.DS_Store
+Thumbs.db
+
+# Test files
+test/*
+tests/*
+__tests__/*
+*.test.js
+*.test.ts
+*.spec.js
+*.spec.ts
+jest.config.*
+vitest.config.*
+
+# TypeScript
+*.tsbuildinfo
+tsconfig.json
+tsconfig.*.json
+
+# Logs and temp files
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.tmp/*
+.temp/*
